# ifac2020_f1tenth_submission

./: README.md  install_deps.sh
src/control/: CMakeLists.txt  README.md
src/control/mpc/: CMakeLists.txt  package.xml
src/control/mpc/src/: cubic_spline_planner.py  ros_mpc.py  ros_mpc_kin.py  ros_mpc_kin_ayoub.py  ros_mpc_linear.py  ros_mpc_local.py  ros_mpc_pacejka.py
src/control/pp/: CMakeLists.txt  package.xml
src/control/pp/src/: ros_pp.py  ros_pp_local.py
src/frenet_planner_f1tenth/: CMakeLists.txt  README.md  package.xml
src/frenet_planner_f1tenth/include/frenet_path_planner/: CMakeLists.txt  README.md
src/frenet_planner_f1tenth/include/frenet_path_planner/cfg/: frenet_planner.yaml
src/frenet_planner_f1tenth/include/frenet_path_planner/demo/: test.cpp
src/frenet_planner_f1tenth/include/frenet_path_planner/include/: cubic_spline_planner.hpp  frenet_optimal_trajectory.hpp
src/frenet_planner_f1tenth/include/frenet_path_planner/src/: cubic_spline_planner.cpp  frenet_optimal_trajectory.cpp
src/frenet_planner_f1tenth/launch/: frenet_planner_unity.launch
src/frenet_planner_f1tenth/src/: frenetROSTopic.cpp
src/frenet_planner_f1tenth/trajectories/: central.trj
src/global_planner/: CMakeLists.txt  package.xml
src/global_planner/berlin/: inner.trj  opt.txt  opt2.txt  opt4.txt  opt5.txt  opt6bis_bis.txt  outer.trj
src/launcher/: CMakeLists.txt  README.md  package.xml
src/launcher/launch/: hipert.launch  hipert_opp.launch
src/muretto/: CMakeLists.txt  README.md  package.xml
src/muretto/conf/: fattibile.txt  settings.yaml
src/muretto/include/: muretto_node.h  occupancy_grid.h
src/muretto/launch/: muretto.launch
src/muretto/msg/: Strategy.msg
src/muretto/src/: muretto_node.cpp  occupancy_grid.cpp  tf_fix.py
src/obstacle_detector/: CMakeLists.txt
src/obstacle_detector/include/obstacle_detector/displays/: obstacles_display.h
src/obstacle_detector/launch/: nodes.launch
src/obstacle_detector/src/: obstacle_extractor.cpp
src/velocities/: CMakeLists.txt  package.xml
src/velocities/launch/: velocities.launch
src/velocities/src/: velocities_node.cpp
